# bcd-numbers

./: Cargo.toml  README.md
src/: bcd.rs  bcd2.rs  error.rs  lib.rs
