[package]
name = "bcd-numbers"
version = "1.0.11"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate for converting rust unsigned numbers to BCD and viceversa"
homepage = "https://github.com/rlkandela/bcd-numbers/"
repository = "https://github.com/rlkandela/bcd-numbers/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
